--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,40 +1,33 @@
 name: fluchat
-description: Chat App implemented using Clean Architecture.
-publish_to: 'none' 
+description: Chat App implemented using Clean Architecture to PGCEEL.
+publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  flutter_bloc: 6.1.2
-  stream_chat_flutter: 1.3.0-beta
-  uuid: 2.2.2
+  flutter_bloc: ^8.1.5
+  stream_chat_flutter: ^7.2.0
+  uuid: ^4.4.0
 
-  firebase_core: 0.7.0
-  google_sign_in: 4.5.9
-  firebase_auth: 0.20.0+1
-  firebase_storage: 7.0.0
-  shared_preferences: 0.5.12+4
+  firebase_core: ^2.29.0
+  google_sign_in: ^6.2.1
+  firebase_auth: ^4.19.1
+  firebase_storage: ^11.7.1
+  shared_preferences: ^2.2.3
   http: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   assets:
-     - assets/
+    - assets/
