--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,5 +66,6 @@ flutter {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.22"
     implementation 'com.android.support:multidex:1.0.3'
 }
