--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,16 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=3.3.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
   flutter_bloc: ^8.1.5
-  stream_chat_flutter: ^7.2.0
+  #stream_chat_flutter: ^7.2.0
+  connectivity_plus: 5.0.2
+  stream_chat_flutter: 7.2.0-hotfix.1
   uuid: ^4.4.0
 
   firebase_core: ^2.29.0
